# Vermilion

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
crates/alembic/: Cargo.toml  README.md
crates/alembic/src/: env.rs  hooks.rs  lib.rs  main.rs
crates/alembic/src/cli/: mod.rs
crates/mercurous/: Cargo.toml  README.md
crates/vermilion/: Cargo.toml
crates/vermilion-constraints/: Cargo.toml  README.md
crates/vermilion-constraints/grammars/: lpf.ebnf  pdc.ebnf  sdc.ebnf  xdc.ebnf
crates/vermilion-constraints/src/: config.rs  lib.rs  workspace.rs
crates/vermilion-constraints/src/diagnostics/: mod.rs
crates/vermilion-constraints/src/lpf/: mod.rs
crates/vermilion-constraints/src/lpf/diagnostics/: mod.rs
crates/vermilion-constraints/src/lpf/lang/: keywords.rs
crates/vermilion-constraints/src/pdc/diagnostics/: mod.rs
crates/vermilion-constraints/src/sdc/: mod.rs
crates/vermilion-constraints/src/sdc/diagnostics/: mod.rs
crates/vermilion-constraints/src/sdc/lang/: keywords.rs
crates/vermilion-core/: Cargo.toml  README.md
crates/vermilion-core/src/: lib.rs  settings.rs
crates/vermilion-dap/: Cargo.toml  README.md
crates/vermilion-dap/src/: event.rs  lib.rs  message.rs  request.rs  response.rs  trace.rs  unknown.rs
crates/vermilion-dap/src/types/: breakpoint.rs  capabilities.rs  exception.rs  mod.rs  options.rs  variable.rs
crates/vermilion-dap/src/types/params/: event.rs  mod.rs  request.rs  response.rs
crates/vermilion-diagnostics/: Cargo.toml  README.md
crates/vermilion-diagnostics/src/: code.rs  config.rs  diagnostic.rs  lib.rs  macros.rs  settings.rs  workspace.rs
crates/vermilion-diagnostics/src/common/: mod.rs
crates/vermilion-diagnostics/src/render/: fancy.rs  mod.rs  plain.rs
crates/vermilion-exec/: Cargo.toml  README.md
crates/vermilion-exec/src/: cli.rs  hooks.rs  lib.rs
crates/vermilion-fmt/: Cargo.toml  README.md
crates/vermilion-fmt/src/: config.rs  lib.rs  settings.rs  workspace.rs
crates/vermilion-io/: Cargo.toml  README.md
crates/vermilion-io/src/: lib.rs  path.rs
crates/vermilion-lang/: Cargo.toml  README.md
crates/vermilion-lang/src/: debug.rs  lexer.rs  lib.rs  parser.rs  position.rs  span.rs  tendril.rs  tokenizer.rs
crates/vermilion-lang/src/lexer/: mod.rs  text.rs
crates/vermilion-liberty/: Cargo.toml  README.md
crates/vermilion-liberty/grammars/: liberty2014_09.ebnf  liberty2015_12.ebnf  liberty2016_06.ebnf  liberty2016_12.ebnf  liberty2017_06.ebnf  liberty2018_06.ebnf  liberty2019_03.ebnf  liberty2019_12.ebnf  liberty2020_09.ebnf
crates/vermilion-liberty/src/: config.rs  lib.rs  workspace.rs
crates/vermilion-liberty/src/diagnostics/: mod.rs
crates/vermilion-liberty/src/lang/parser/: mod.rs  tests.rs
crates/vermilion-liberty/src/lang/tokenizer/: mod.rs  tests.rs  token.rs
crates/vermilion-loc/: Cargo.toml  README.md
crates/vermilion-loc/src/: lib.rs  loc.rs  position.rs  span.rs
crates/vermilion-lsp/: Cargo.toml  README.md
crates/vermilion-lsp/src/: error.rs  lib.rs  message.rs  notification.rs  request.rs  response.rs  trace.rs
crates/vermilion-lsp/src/transports/: mod.rs  pipe_unix.rs  pipe_win.rs  socket.rs  stdio.rs  trace.rs
crates/vermilion-lsp/src/types/: base.rs  mod.rs  options.rs  params.rs  semantic_tokens.rs
crates/vermilion-macros/: Cargo.toml  README.md
crates/vermilion-macros/src/: cfg.rs  lib.rs
crates/vermilion-mdbook/: Cargo.toml  README.md
crates/vermilion-mdbook/src/: main.rs  render.rs
crates/vermilion-mdbook/src/preprocessor/: alembic.rs  cinnabar.rs  cli.rs  mod.rs  schema.rs  vermilion.rs
crates/vermilion-temagamite/: Cargo.toml  README.md
crates/vermilion-temagamite/src/: blocks.rs  config.rs  encryption.rs  lib.rs  workspace.rs
crates/vermilion-verilog/: Cargo.toml  README.md
crates/vermilion-verilog/grammars/: system_verilog2005.ebnf  system_verilog2009.ebnf  system_verilog2012.ebnf  system_verilog2017.ebnf  system_verilog2023.ebnf  system_verilog_psl2005.ebnf  system_verilog_psl2010.ebnf  system_verilog_psl2012.ebnf  verilog1995.ebnf  verilog2001.ebnf  verilog2005.ebnf  verilog_ams2009.ebnf  verilog_ams2014.ebnf  verilog_ams2023.ebnf  verilog_psl2005.ebnf  verilog_psl2010.ebnf  verilog_psl2012.ebnf
crates/vermilion-verilog/src/: config.rs  lib.rs  settings.rs  workspace.rs
crates/vermilion-verilog/src/diagnostics/: mod.rs
crates/vermilion-verilog/src/fmt/: settings.rs  workspace.rs
crates/vermilion-verilog/src/lang/: ast.rs  directives.rs  keywords.rs  mod.rs  parser.rs  sysfuncs.rs  text_macros.rs  types.rs
crates/vermilion-verilog/src/lint/: mod.rs  settings.rs  workspace.rs
crates/vermilion-vhdl/: Cargo.toml  README.md
crates/vermilion-vhdl/grammars/: vhdl-ams1999.ebnf  vhdl-ams2007.ebnf  vhdl-ams2009.ebnf  vhdl-ams2017.ebnf  vhdl-ams2021.ebnf  vhdl1987.ebnf  vhdl1993.ebnf  vhdl2000.ebnf  vhdl2002.ebnf  vhdl2004.ebnf  vhdl2007.ebnf  vhdl2008.ebnf  vhdl2011.ebnf  vhdl2019.ebnf  vhdl2023.ebnf  vhdl_psl2005.ebnf  vhdl_psl2010.ebnf  vhdl_psl2012.ebnf
crates/vermilion-vhdl/src/: config.rs  lib.rs  settings.rs  workspace.rs
crates/vermilion-vhdl/src/diagnostics/: mod.rs
crates/vermilion-vhdl/src/fmt/: mod.rs  settings.rs  workspace.rs
crates/vermilion-vhdl/src/lang/: ast.rs  keywords.rs  mod.rs  parser.rs
crates/vermilion-vhdl/src/lint/: mod.rs  settings.rs  workspace.rs
crates/vermilion-xact/: Cargo.toml  README.md
crates/vermilion-xact/src/: config.rs  lib.rs  tests.rs  workspace.rs
crates/vermilion-xact/src/diagnostics/: mod.rs
crates/vermilion-xact/src/schemas/: mod.rs
crates/vermilion/src/: config.rs  env.rs  eyre_hook.rs  fs.rs  hooks.rs  lang.rs  lib.rs  main.rs  paths.rs  settings.rs  workspace.rs
crates/vermilion/src/cli/: mod.rs
crates/vermilion/src/lang/: mod.rs
crates/vermilion/src/lsp/: mod.rs  semantic_tokens.rs  workspace.rs
fuzzing/: Cargo.toml  README.md
fuzzing/targets/: verilog_tokenizer.rs
xtask/: Cargo.toml  README.md
xtask/src/: git.rs  main.rs  paths.rs
xtask/src/commands/: mod.rs
(+291 files in other folders)
