[workspace]
resolver = '3'
members  = [
	"crates/*"
]

[workspace.package]
version       = "0.0.0"
publish       = false
edition       = "2024"
license       = "BSD-3-Clause"
rust-version  = "1.92"
repository    = "https://github.com/shrine-maiden-heavy-industries/vermilion"
homepage      = "https://github.com/shrine-maiden-heavy-industries/vermilion"
documentation = "https://github.com/shrine-maiden-heavy-industries/vermilion"

[workspace.dependencies]
# Core Vermilion Crates
vermilion             = { path = "crates/vermilion"             }
vermilion-diagnostics = { path = "crates/vermilion-diagnostics" }
vermilion-fmt         = { path = "crates/vermilion-fmt"         }
vermilion-lang        = { path = "crates/vermilion-lang"        }
vermilion-lsp         = { path = "crates/vermilion-lsp"         }
vermilion-verilog     = { path = "crates/vermilion-verilog"     }
vermilion-vhdl        = { path = "crates/vermilion-vhdl"        }

# External Deps
ariadne            = { version = "0.6", features = ["auto-color"] }
bitmask-enum       = { version = "2.2.5" }
chrono             = { version = "0.4.42", features = [ "serde" ] }
chumsky            = { version = "0.11", features = ["extension", "regex", "memoization", "stacker"] }
clap               = { version = "4.5" }
clap_complete      = { version = "4.5" }
color-eyre         = { version = "0.6" }
color-print        = { version = "0.3", features = [ "terminfo" ] }
colorchoice        = { version = "1.0" }
console-subscriber = { version = "0.5" }
criterion          = { version = "0.8" }
crossterm          = { version = "0.29" }
directories        = { version = "6.0" }
eyre               = { version = "0.6", default-features = false }
fluent-uri         = { version = "0.4", features = [ "serde" ] }
notify             = { version = "8.2" }
paste              = { version = "1.0.15" }
proptest           = { version = "1.9" }
pulldown-cmark     = { version = "0.13", default-features = false }
ratatui            = { version = "0.29" }
rayon              = { version = "1.11.0" }
schemars           = { version = "1.1", features = [ "derive" ] }
serde              = { version = "1.0", features = [ "derive" ] }
serde_json         = { version = "1.0" }
serde_repr         = { version = "0.1" }
syntect            = { version = "5.3" }
sysinfo            = { version = "0.37.2" }
tendril            = { version = "0.4" }
test-log           = { version = "0.2", features = ["trace", "color"] }
tokio              = { version = "1.48", features = [ "rt", "rt-multi-thread", "net", "time", "macros", "sync", "signal", "tracing", "fs" ] }
tokio-stream       = { version = "0.1", features = [ "full" ] }
tokio-util         = { version = "0.7", features = [ "tracing" ] }
toml               = { version = "0.9" }
tracing            = { version = "0.1", features = [ "async-await" ] }
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt", "ansi", "registry" ] }

# Windows Only deps
windows-sys = { version = "0.61.2" }

[workspace.lints.clippy]
allow_attributes_without_reason = "warn"
cast_lossless = "warn"
use_self = "warn"
wildcard_dependencies = "warn"
unwrap_used = "deny"
expect_used = "deny"

[profile.dev.package.backtrace]
opt-level = 3

[profile.devopt]
inherits      = "dev"
codegen-units = 1
lto           = "fat"
opt-level     = 3

# TODO(aki): Wiggle this a bit and combine with PGO build steps eventually
[profile.dist]
inherits      = "release"
codegen-units = 1
lto           = "fat"
strip         = "debuginfo"
