# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "xtask"
publish       = false
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
clap               = { workspace = true }
color-eyre         = { workspace = true }
eyre               = { workspace = true }
git2               = { workspace = true }
semver             = { workspace = true }
toml_edit          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
