# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-constraints"
description   = "EDA Tooling constraint file support for Vermilion"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
vermilion-calomel     = { workspace = true }
vermilion-diagnostics = { workspace = true }
vermilion-fmt         = { workspace = true }
vermilion-lang        = { workspace = true }
vermilion-loc         = { workspace = true }
vermilion-macros      = { workspace = true }

bitmask-enum          = { workspace = true }
bumpalo               = { workspace = true }
clap                  = { workspace = true, optional = true }
color-print           = { workspace = true, optional = true }
eyre                  = { workspace = true }
paste                 = { workspace = true }
phf                   = { workspace = true }
schemars              = { workspace = true, optional = true }
serde                 = { workspace = true, optional = true }
tendril               = { workspace = true }

[dev-dependencies]
criterion  = { workspace = true }
proptest   = { workspace = true }
serde_test = { workspace = true }
test-log   = { workspace = true }

[features]
default   = []

cli       = [ "dep:clap" ]
color-dbg = [
	"dep:color-print", "vermilion-calomel/color-dbg", "vermilion-diagnostics/color-dbg", "vermilion-fmt/color-dbg",
	"vermilion-lang/color-dbg", "vermilion-loc/color-dbg"
]
graphviz  = [ "vermilion-calomel/graphviz", "vermilion-lang/graphviz" ]
schema    = [
	"dep:schemars", "serde", "vermilion-calomel/schema", "vermilion-diagnostics/schema", "vermilion-fmt/schema"
]
serde     = [ "dep:serde", "vermilion-calomel/serde", "vermilion-diagnostics/serde", "vermilion-fmt/serde" ]

[lints]
workspace = true
