# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-core"
version       = "0.1.0"
description   = ""
publish       = false
edition       = { workspace = true }
license       = { workspace = true }
rust-version  = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[dependencies]
schemars = { workspace = true, optional = true }
serde    = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

serde  = [ "dep:serde" ]
schema = [ "serde", "dep:schemars" ]
