# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-core"
description   = "Core types and utilities for use with Vermilion"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
schemars = { workspace = true, optional = true }
serde    = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

serde  = [ "dep:serde" ]
schema = [ "serde", "dep:schemars" ]
