# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-dap"
description   = "Types and machinery for DAP support in Cinnabar/Vermilion"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
vermilion-macros = { workspace = true }

chrono           = { workspace = true }
eyre             = { workspace = true }
fluent-uri       = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true, optional = true }
tokio-util       = { workspace = true, optional = true }
tracing          = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

trace = []
trace-server = [ "trace", "transport" ]
transport = [ "dep:tokio", "dep:tokio-util", "dep:tracing", ]

[lints]
workspace = true
