# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-diagnostics"
description   = "Common diagnostic infrastructure for Vermillion supported languages"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
vermilion-loc  = { workspace = true }

ariadne        = { workspace = true }
crossterm      = { workspace = true, optional = true }
phf            = { workspace = true }
pulldown-cmark = { workspace = true, optional = true }
ratatui        = { workspace = true, optional = true }
schemars       = { workspace = true, optional = true }
serde          = { workspace = true, optional = true }
syntect        = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

serde  = [ "dep:serde" ]
schema = [ "serde", "dep:schemars" ]
render-diagnostics = [ "dep:pulldown-cmark", ]
pretty-diagnostics = [ "render-diagnostics", "dep:crossterm", "dep:ratatui", "dep:syntect" ]

[lints]
workspace = true
