# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-diagnostics"
description   = "Common diagnostic infrastructure for Vermillion supported languages"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
vermilion-loc    = { workspace = true }
vermilion-macros = { workspace = true }

ariadne          = { workspace = true }
bumpalo          = { workspace = true }
crossterm        = { workspace = true, optional = true }
paste            = { workspace = true }
phf              = { workspace = true }
pulldown-cmark   = { workspace = true, optional = true }
ratatui          = { workspace = true, optional = true }
schemars         = { workspace = true, optional = true }
serde            = { workspace = true, optional = true }
syntect          = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

pretty = [ "render", "dep:crossterm", "dep:ratatui", "dep:syntect" ]
render = [ "dep:pulldown-cmark", ]
schema = [ "serde", "dep:schemars" ]
serde  = [ "dep:serde" ]

[lints]
workspace = true
