# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-fmt"
description   = "Common formatting infrastructure for Vermilion supported languages"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
schemars = { workspace = true, optional = true }
serde    = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

serde  = [ "dep:serde" ]
schema = [ "serde", "dep:schemars" ]
