# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-fmt"
description   = "Common formatting infrastructure for Vermilion supported languages"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
vermilion-loc    = { workspace = true }
vermilion-macros = { workspace = true }

schemars         = { workspace = true, optional = true }
serde            = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

schema = [ "serde", "dep:schemars" ]
serde  = [ "dep:serde" ]

[lints]
workspace = true
