# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-io"
description   = "I/O abstractions and utilities for Vermilion an Cinnabar"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
flate2   = { workspace = true }
lz4_flex = { workspace = true }
memmap2  = { workspace = true }
rayon    = { workspace = true }
tracing  = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

[lints]
workspace = true
