# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-lang"
description   = "Common language infrastructure for Vermillion supported languages"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
vermilion-diagnostics = { workspace = true }
vermilion-fmt         = { workspace = true }
vermilion-io          = { workspace = true }
vermilion-loc         = { workspace = true }
vermilion-macros      = { workspace = true }

# XXX(aki): The functionality of `ariadne` will likely be absorbed into the diagnostics crate
ariadne    = { workspace = true }
bumpalo    = { workspace = true }
num-traits = { workspace = true }
tendril    = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

graphviz = []

[lints]
workspace = true
