# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-loc"
description   = "Location/Context types for use in diagnostics and language frontends"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
vermilion-macros = { workspace = true }

# XXX(aki):
# The functionality of `ariadne` will likely be absorbed into the diagnostics crate,
# this is here for type conversion for the moment.
ariadne          = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

graphviz-output = []

[lints]
workspace = true
