# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-lsp"
description   = "Types and machinery for LSP support in Vermilion"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
chumsky    = { workspace = true, optional = true }
fluent-uri = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

chumsky = [ "dep:chumsky" ]
