# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-lsp"
description   = "Types and machinery for LSP support in Vermilion"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
bitmask-enum = { workspace = true }
chrono     = { workspace = true }
eyre       = { workspace = true }
fluent-uri = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
tracing    = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []
